clusters/milkyway/apps/tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: speedtest-ingress
spec:
 tls:
 - hosts:
   - speedtest.cosmos.cboxlab.com
   secretName: speedtest-tls-secret
 rules:
 - host: speedtest.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: speedtest
           port:
             name: http
       path: /
       pathType: Prefix
